--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cryptr": "^4.0.2",
     "js-cookie": "^2.2.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
